[package]
name = "bgpq4-sys"
version = "0.1.0"
authors = ["Brooks Swinnerton <bswinnerton@gmail.com>"]
edition = "2018"
links = "bgpq4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
autotools = "0.2"
bindgen = "0.58.1"
